@@ -6,5 +6,6 @@ license             = Perl_5
 
 [@Author::ETHER]
 :version = 0.018
+Test::MinimumVersion.max_target_perl = 5.010000
 
 [Test::Kwalitee]
