@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - new config option: "starting_version = current"
 
 0.002     2013-08-17 17:17:03Z (Karen Etheridge)
           - now respecting the deprecated_ok config
